# designspacediscovery

./: README.md  breakingstuff.txt  purchaseable_with_tsne.csv  pyproject.toml  requirements.txt  streamlitapp.py
.github/workflows/: test-package.yml
designspacediscovery/: querypubchem.py  similaritysearch.py  upconverting.py  utils.py  vendors.py
designspacediscovery/tests/: test_querypubchem.py  test_similaritysearch.py  test_upconverting.py  test_utils.py  test_vendors.py
designspacediscovery/webscraping/: tokyo_chemical_industries.py
streamlit/: DES_redox_components_altairdata.csv  TMI_demo_altairdata.csv  safetypassed_altair.csv  streamlitapp.py  synthesizeable_altairsample.csv
tests/: test_querypubchem.py
